[package]
name = "nobreak"
version = "0.1.0"
authors = ["Jacques Lucke <mail@jlucke.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
anyhow = "1.0.51"
tokio = { version = "1.14.0", features = ["process"] }
clap = { version = "3.1.2", features = ["derive"] }
reqwest = "0.11.7"
serde = "1.0.130"
serde_json = "1.0.72"
byteorder = "1.4.3"
